# rule34scraper

./: README.md  main.py  pyproject.toml  test_output.txt
.github/workflows/: ci.yml  python-publish.yml
rule34scraper/: __init__.py  client.py  models.py  parser.py
rule34wrapper/: __init__.py  client.py  models.py  parser.py
tests/: test_client.py  test_parser.py
