[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rule34scraper"
version = "1.0.1"
description = "A fast Python API wrapper for rule34 image board"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "whatimdoingwithmylife-sudo" }
]
keywords = ["api", "wrapper", "imageboard", "scraper"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.24.0",
    "selectolax>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.urls]
Homepage = "https://github.com/whatimdoingwithmylife-sudo/rule34wrapper"
Repository = "https://github.com/whatimdoingwithmylife-sudo/rule34wrapper"

[tool.hatch.build.targets.wheel]
packages = ["rule34scraper"]
